@@ -1,10 +1,0 @@
-Requires: pupmod-puppetlabs-stdlib < 5.0.0-0
-Requires: pupmod-puppetlabs-stdlib >= 4.9.0-0
-Requires: pupmod-simp-haveged < 1.0.0-0
-Requires: pupmod-simp-haveged >= 0.3.3-0
-Requires: pupmod-simp-iptables < 7.0.0-0
-Requires: pupmod-simp-iptables >= 6.0.0-0
-Requires: pupmod-simp-pki < 7.0.0-0
-Requires: pupmod-simp-pki >= 6.0.0-0
-Requires: pupmod-simp-simplib >= 3.1.0-0
-Requires: pupmod-simp-simplib < 4.0.0-0
