@@ -94,6 +94,12 @@
 # @param hidetos
 # @param overridemtu
 #
+# @param block_cidrs List of CIDRs to which communication should never be allowed
+# @param clear_cidrs List of CIDRs to which communication should always be in the clear
+# @param clear_private_cidrs List of CIDRs to which communication will be in the clear, or, if the other side initiates IPSEC, use encryption
+# @param private_cidrs List of CIDRs to which communication should always be private
+# @param private_clear_cidrs List of CIDRs to which communication should be private if possible but in the clear otherwise
+#
 # * See the libreswan doumentation https://libreswan.org/man/ipsec.conf.5.html
 # for more information regarding these variables.
 # Any variable set to undefined will not appear in the configuration
@@ -104,63 +110,70 @@
 # @author https://github.com/simp/pupmod-simp-libreswan/graphs/contributors
 #
 class libreswan (
-  String                          $service_name            = $::libreswan::params::service_name,
-  String                          $package_name            = $::libreswan::params::package_name,
-  Simplib::Netlist                $trusted_nets            = simplib::lookup('simp_options::trusted_nets', {'default_value' => ['127.0.0.1/32'] }),
-  Boolean                         $firewall                = simplib::lookup('simp_options::firewall', {'default_value' => false }),
-  Boolean                         $fips                    = simplib::lookup('simp_options::fips', {'default_value' => false }),
-  Boolean                         $use_certs               = true,
-  Variant[Boolean,Enum['simp']]   $pki                     = simplib::lookup('simp_options::pki', {'default_value' => false }),
-  Boolean                         $haveged                 = simplib::lookup('simp_options::haveged', {'default_value' => false }),
-  String                          $nssdb_password          = passgen('nssdb_password'),
+  String                                 $service_name            = $::libreswan::params::service_name,
+  String                                 $package_name            = $::libreswan::params::package_name,
+  Simplib::Netlist                       $trusted_nets            = simplib::lookup('simp_options::trusted_nets', {'default_value' => ['127.0.0.1/32'] }),
+  Boolean                                $firewall                = simplib::lookup('simp_options::firewall', {'default_value' => false }),
+  Boolean                                $fips                    = simplib::lookup('simp_options::fips', {'default_value' => false }),
+  Boolean                                $use_certs               = true,
+  Variant[Boolean,Enum['simp']]          $pki                     = simplib::lookup('simp_options::pki', {'default_value' => false }),
+  Boolean                                $haveged                 = simplib::lookup('simp_options::haveged', {'default_value' => false }),
+  String                                 $nssdb_password          = passgen('nssdb_password'),
   # Possible Values in ipsec.conf file
-  Optional[String]                $myid                    = undef,
-  Enum['netkey','klips','mast']   $protostack              = 'netkey',
-  Optional[Libreswan::Interfaces] $interfaces              = undef,
-  Optional[Simplib::IP]           $listen                  = undef,
-  Simplib::Port                   $ikeport                 = 500,
-  Optional[Integer]               $nflog_all               = undef,
-  Simplib::Port                   $nat_ikeport             = 4500,
-  Optional[Integer]               $keep_alive              = undef,
+  Optional[String]                       $myid                    = undef,
+  Enum['netkey','klips','mast']          $protostack              = 'netkey',
+  Optional[Libreswan::Interfaces]        $interfaces              = undef,
+  Optional[Simplib::IP]                  $listen                  = undef,
+  Simplib::Port                          $ikeport                 = 500,
+  Optional[Integer]                      $nflog_all               = undef,
+  Simplib::Port                          $nat_ikeport             = 4500,
+  Optional[Integer]                      $keep_alive              = undef,
 #
-  Libreswan::VirtualPrivate       $virtual_private         = ['%v4:10.0.0.0/8','%v4:192.168.0.0/16','%v4:172.16.0.0/12'],
-  Optional[String]                $myvendorid              = undef,
-  Optional[Integer]               $nhelpers                = undef,
+  Libreswan::VirtualPrivate              $virtual_private         = ['%v4:10.0.0.0/8','%v4:192.168.0.0/16','%v4:172.16.0.0/12'],
+  Optional[String]                       $myvendorid              = undef,
+  Optional[Integer]                      $nhelpers                = undef,
 #seedbits
 #secctx-attr-type
-  Optional[Enum['yes','no']]      $plutofork               = undef,
-  Optional[Integer]               $crlcheckinterval        = undef,
-  Optional[Enum['yes','no']]      $strictcrlpolicy         = undef,
-  Optional[Enum['yes','no']]      $ocsp_enable             = undef,
-  Optional[Enum['yes','no']]      $ocsp_strict             = undef,
-  Optional[Integer]               $ocsp_timeout            = undef,
-  Optional[Simplib::Uri]          $ocsp_uri                = undef,
-  Optional[String]                $ocsp_trustname          = undef,
-  Optional[String]                $syslog                  = undef,
-  String                          $klipsdebug              = 'none',
-  String                          $plutodebug              = 'none',
-  Optional[Enum['yes','no']]      $uniqueids               = undef,
-  Optional[Enum['yes','no']]      $plutorestartoncrash     = undef,
-  Optional[Stdlib::Absolutepath]  $logfile                 = undef,
-  Optional[Enum['yes','no']]      $logappend               = undef,
-  Optional[Enum['yes','no']]      $logtime                 = undef,
+  Optional[Enum['yes','no']]             $plutofork               = undef,
+  Optional[Integer]                      $crlcheckinterval        = undef,
+  Optional[Enum['yes','no']]             $strictcrlpolicy         = undef,
+  Optional[Enum['yes','no']]             $ocsp_enable             = undef,
+  Optional[Enum['yes','no']]             $ocsp_strict             = undef,
+  Optional[Integer]                      $ocsp_timeout            = undef,
+  Optional[Simplib::Uri]                 $ocsp_uri                = undef,
+  Optional[String]                       $ocsp_trustname          = undef,
+  Optional[String]                       $syslog                  = undef,
+  String                                 $klipsdebug              = 'none',
+  String                                 $plutodebug              = 'none',
+  Optional[Enum['yes','no']]             $uniqueids               = undef,
+  Optional[Enum['yes','no']]             $plutorestartoncrash     = undef,
+  Optional[Stdlib::Absolutepath]         $logfile                 = undef,
+  Optional[Enum['yes','no']]             $logappend               = undef,
+  Optional[Enum['yes','no']]             $logtime                 = undef,
   Optional[Enum['busy',
-    'unlimited','auto']]          $ddos_mode               = undef,
-  Optional[Integer]               $ddos_ike_treshold       = undef,  # incorrect spelling in libreswan 3.1.5 source code verified
+    'unlimited','auto']]                 $ddos_mode               = undef,
+  Optional[Integer]                      $ddos_ike_treshold       = undef,  # incorrect spelling in libreswan 3.1.5 source code verified
 #max-halfopen-ike
 #shuntlifetime
 #xfrmlifetime
-  Stdlib::Absolutepath            $dumpdir                 = '/var/run/pluto',
-  Optional[String]                $statsbin                = undef,
-  Stdlib::Absolutepath            $ipsecdir                = '/etc/ipsec.d',
-  Stdlib::Absolutepath            $secretsfile             = '/etc/ipsec.secrets',
-  Optional[Enum['yes','no']]      $perpeerlog              = undef,
-  Stdlib::Absolutepath            $perpeerlogdir           = '/var/log/pluto/peer',
-  Optional[Enum['yes','no']]      $fragicmp                = undef,
-  Optional[Enum['yes','no']]      $hidetos                 = undef,
-  Optional[Integer]               $overridemtu             = undef,
+  Stdlib::Absolutepath                   $dumpdir                 = '/var/run/pluto',
+  Optional[String]                       $statsbin                = undef,
+  Stdlib::Absolutepath                   $ipsecdir                = '/etc/ipsec.d',
+  Stdlib::Absolutepath                   $secretsfile             = '/etc/ipsec.secrets',
+  Optional[Enum['yes','no']]             $perpeerlog              = undef,
+  Stdlib::Absolutepath                   $perpeerlogdir           = '/var/log/pluto/peer',
+  Optional[Enum['yes','no']]             $fragicmp                = undef,
+  Optional[Enum['yes','no']]             $hidetos                 = undef,
+  Optional[Integer]                      $overridemtu             = undef,
+  Optional[Array[Simplib::IP::V4::CIDR]] $block_cidrs             = undef,
+  Optional[Array[Simplib::IP::V4::CIDR]] $clear_cidrs             = undef,
+  Optional[Array[Simplib::IP::V4::CIDR]] $clear_private_cidrs     = undef,
+  Optional[Array[Simplib::IP::V4::CIDR]] $private_cidrs           = undef,
+  Optional[Array[Simplib::IP::V4::CIDR]] $private_clear_cidrs     = ['0.0.0.0/0']
 
 ) inherits ::libreswan::params {
+
+  simplib::assert_metadata($module_name)
 
   # set the token for the NSS database.
   if $fips or $facts['fips_enabled'] {
