@@ -1,0 +1,13 @@
+# THIS FILE IS CONTROLLED BY PUPPET
+#
+# This file defines the set of CIDRs (network/mask-length) to which
+# communication should always be private (i.e. encrypted).
+# See /usr/share/doc/libreswan/policygroups.html for details.
+#
+# $Id: private.in,v 1.4 2003/02/17 02:22:15 mcr Exp $
+#
+<% if @private_cidrs then -%>
+<%   @private_cidrs.each do |cidr| %>
+<%= cidr %>
+<%   end -%>
+<% end -%>
