@@ -1,0 +1,19 @@
+# THIS FILE IS CONTROLLED BY PUPPET
+#
+# This file defines the set of CIDRs (network/mask-length) to which
+# communication should be private, if possible, but in the clear otherwise.
+#
+# If the target has a TXT (later IPSECKEY) record that specifies
+# authentication material, we will require private (i.e. encrypted)
+# communications.  If no such record is found, communications will be
+# in the clear.
+#
+# See /usr/share/doc/libreswan/policygroups.html for details.
+#
+# $Id: private-or-clear.in,v 1.5 2003/02/17 02:22:15 mcr Exp $
+#
+<% if @private_clear_cidrs then -%>
+<%   @private_clear_cidrs.each do |cidr| %>
+<%= cidr %>
+<%   end -%>
+<% end -%>
